fix: add missing folders and source files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,8 @@
 add_executable(engine
     engine/core/main.cpp
+    engine/core/Engine.cpp
 )
 
 target_include_directories(engine PRIVATE
     ${CMAKE_SOURCE_DIR}/include
 )
-
-# We'll link SDL2, GLFW, etc. later — for now, just build
