--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,11 @@
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(engine
     engine/core/main.cpp
     engine/core/Engine.cpp
     engine/render/Shader.cpp
-    engine/math/Math.cpp
-)
+    engine/core/PlayerController.cpp 
+    engine/math/Math.cpp)
 
 target_include_directories(engine PRIVATE
     "${CMAKE_SOURCE_DIR}/include"
